Try to build shared objects.
Signed-off-by: Paul Osmialowski <pawelo@king.net.pl>

--- a/lib/Basic/CMakeLists.txt
+++ b/lib/Basic/CMakeLists.txt
@@ -27,4 +27,9 @@ add_dependencies(flangBasic
   FlangDiagnosticFrontend
   FlangDiagnosticGroups
   FlangDiagnosticSema
-  )  
+  )
+
+target_link_libraries(flangBasic
+  flangAST
+  LLVMSupport
+  )
